# fastapi-onion-boilerplate

./: .dockerignore  .env.test  .env_example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  main.py  pyproject.toml  restart_container.sh  run_test_docker.sh  settings.py
alembic/: env.py
alembic/versions/: 0d591e6c6656_init.py  0f3d933a9d39_ini.py  3cbbf6c41cab_init.py  48e71098ed93_initial.py  71a8e9b85c4d_second_initial.py  9c12b12f0661_initial.py  9e148abfeb1e_zxc.py  c46572c23273_test_migrate.py
app/: app_config.py  dependency.py  exceptions.py  logger.py  main.py  settings.py
app/applications/: __init__.py  handlers.py  models.py  repository.py  schema.py  schemas.py  service.py
app/applications/repository/: application_repository.py
app/broker/: consumer.py  producer.py
app/image_upload/: __init__.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/image_upload/repository/: image_repository.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/infrastructure/database/mongo_db/: accessor.py
app/mongo/: __init__.py  mongo.py  schemas.py
app/users/auth/: __init__.py  config.py  dependency.py  handlers.py  manager.py  models.py  schemas.py  user_dependency.py
app/users/auth/core/: security.py
tests/: conftest.py
tests/crud_applications/: test_applications_repository.py  test_applications_service.py  test_repository.py  test_service.py
tests/crud_image_upload/: test_image_repository.py  test_repository.py  test_service.py
tests/utils/: factories.py  utils.py
