[project]
name = "fastapi-api"
version = "0.1.0"
description = ""
authors = [
    { name = "None" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "make (>=0.1.6.post2,<0.2.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "confluent-kafka (>=2.8.0,<3.0.0)",
    "kafka (>=1.3.5,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "tree (>=0.2.4,<0.3.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

