[project]
name = "fastapi-kafka-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiokafka>=0.12.0",
    "alembic>=1.15.2",
    "async-factory-boy>=1.0.1",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "factory-boy>=3.3.3",
    "faker>=37.1.0",
    "fastapi>=0.115.12",
    "fastapi-users>=14.0.1",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
